[package]
name = "nyoom"
description = "A sorta-fast cross-platform multithreaded filesystem walker."
version = "0.0.5"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/queer/nyoom"
categories = ["concurrency", "filesystem"]
keywords = ["directory", "walk", "ignore", "walkdir", "walk_dir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", features = ["issue-url"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-deque", "crossbeam-queue"] }
dashmap = "5.4.0"
eyre = "0.6.8"
libc = "0.2.140"
nix = "0.26.2"
num_cpus = "1.15.0"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.4.0"
ignore = "0.4.20"
jwalk = "0.8.1"
walkdir = "2.3.3"

[[bench]]
name = "walk_dir"
harness = false
