[package]
name = "nyoom"
description = "A filesystem walker for floppy-disk."
version = "0.3.2"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/queer/nyoom"
categories = ["concurrency", "filesystem"]
keywords = ["directory", "walk", "ignore", "walkdir", "walk_dir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", features = ["issue-url"] }
dashmap = "5.4.0"
eyre = "0.6.8"
floppy-disk = "0.1.3"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["sync", "rt", "macros", "rt-multi-thread", "test-util"] }

[profile.release]
debug = true
